--- a/SalesWebMVC/Views/Home/Contact.cshtml
+++ b/SalesWebMVC/Views/Home/Contact.cshtml
@@ -12,6 +12,7 @@
 </address>
 
 <address>
+    <strong>Direct:</strong> <a href="mailto:" + @ViewData["email"]>@ViewData["email"]</a><br/>
     <strong>Support:</strong> <a href="mailto:Support@example.com">Support@example.com</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
